src/components/reader/styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;

a {
    text-decoration: underline;
    text-decoration-color: #bfc8ff;
    color: #bfc8ff;
}

pre {
    border-radius: 5px;
    background: #252525;
    padding: 12px;
    margin: 8px;
    overflow: auto;
}

code {
    background: #252525;
    color: #8df3f9;
    border-radius: 3px;
    padding: 2px 6px;
}

h1 {
    font-size: 23px;
    font-weight: 800;
    margin: 6px 0;
}

h2 {
    font-size: 20px;
    font-weight: 700;
    margin: 6px 10px;
    color: #ffd18d;
}

h3 {
    font-size: 17px;
    font-weight: 700;
    margin: 6px 20px;
    color: #ff8dbd;
}

h4 {
    font-size: 15px;
    margin: 6px 30px;
    font-weight: 600;
    color: #9dff8d;
}

h5 {
    font-size: 15px;
    margin: 6px 40px;
    font-weight: 600;
    color: #8df3f9;
}

h5 {
    font-size: 13px;
    margin: 6px 50px;
    font-weight: 600;
    color: #cd8dff;
}

em {
    color: #ff8f8d
}

span>ul {
    padding-left: 38px;
    padding-top: 15px;
    list-style-type: circle;
}

/* CUSTOM SCROLLBAR */
::-webkit-scrollbar {
    width: 5px;
    height: 5px;
}

/* Track */
::-webkit-scrollbar-track {
    background: #222;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #555;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #777;
}

